3.4.3/_sources/gallery/text_labels_and_annotations/fancytextbox_demo.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/text_labels_and_annotations/fancytextbox_demo.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_text_labels_and_annotations_fancytextbox_demo.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_text_labels_and_annotations_fancytextbox_demo.py:


==================
Styling text boxes
==================

This example shows how to style text boxes using *bbox* parameters.

.. GENERATED FROM PYTHON SOURCE LINES 8-27



.. image:: /gallery/text_labels_and_annotations/images/sphx_glr_fancytextbox_demo_001.png
    :alt: fancytextbox demo
    :class: sphx-glr-single-img





.. code-block:: default

    import matplotlib.pyplot as plt

    plt.text(0.6, 0.7, "eggs", size=50, rotation=30.,
             ha="center", va="center",
             bbox=dict(boxstyle="round",
                       ec=(1., 0.5, 0.5),
                       fc=(1., 0.8, 0.8),
                       )
             )

    plt.text(0.55, 0.6, "spam", size=50, rotation=-25.,
             ha="right", va="top",
             bbox=dict(boxstyle="square",
                       ec=(1., 0.5, 0.5),
                       fc=(1., 0.8, 0.8),
                       )
             )

    plt.show()


.. _sphx_glr_download_gallery_text_labels_and_annotations_fancytextbox_demo.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: fancytextbox_demo.py <fancytextbox_demo.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: fancytextbox_demo.ipynb <fancytextbox_demo.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
